feat: Add refresh cache functionality with modal for managing cached locations

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
 <!-- Modals -->
 {% include "components/location_modal.html" %}
 {% include "components/switch_modal.html" %}
+{% include "components/refresh_modal.html" %}
 {% endblock %}
 
 {% block scripts %}
