--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %}Weather{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌤️</text></svg>" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,11 +27,6 @@
 
       <main class="relative w-full max-w-5xl mx-auto px-4 sm:px-6 py-8 sm:py-12">
         {% block content %}{% endblock %}
-
-        <!-- Footer -->
-        <footer class="text-center mt-8 pb-4">
-          <p class="text-white/30 text-xs">Data from api.weather.gov</p>
-        </footer>
       </main>
     </div>
 
