--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
         <div class="bg-grid"></div>
       </div>
 
+      <!-- Weather Animation Effects Container -->
+      <div id="weather-effects" class="weather-effects"></div>
+
       <main class="relative w-full max-w-5xl mx-auto px-4 sm:px-6 py-8 sm:py-12">
         {% block content %}{% endblock %}
       </main>
